<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/register_username_entry"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_last_name_entry" />

        <EditText
            android:id="@+id/register_last_name_entry"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_first_name_entry" />

        <EditText
            android:id="@+id/register_first_name_entry"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_pass_confirm_field" />

        <EditText
            android:id="@+id/register_pass_confirm_field"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/retype_password"
            android:inputType="textVisiblePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_pass_entry_field" />

        <EditText
            android:id="@+id/register_pass_entry_field"
            android:layout_width="347dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:allowUndo="true"
            android:ems="10"
            android:hint="@string/password_field"
            android:inputType="textVisiblePassword"
            android:textIsSelectable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_entry_field" />

        <EditText
            android:id="@+id/register_email_entry_field"
            android:layout_width="341dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/send_registration_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>